# hector_turtlebot

./: README.md
hector_turtlebot_description/: CMakeLists.txt  package.xml
hector_turtlebot_description/launch/: xacrodisplay_sick_setup.launch
hector_turtlebot_description/urdf/: camera.urdf.xacro  turtlebot_sick_setup.xacro
hector_turtlebot_gazebo/: CMakeLists.txt  package.xml
hector_turtlebot_gazebo/launch/: spawn_sick_robot_day_2014_setup.launch  spawn_sick_robot_empty_world.launch  start_in_sick_robot_day_2014_world.launch
hector_turtlebot_navigation/: CMakeLists.txt  package.xml
hector_turtlebot_navigation/launch/: gmapping.launch  hector_mapping.launch
hector_turtlebot_navigation/launch/includes/: gmapping.launch.xml  hector_mapping.launch.xml
hector_turtlebot_scan_filter/: CMakeLists.txt  mainpage.dox  package.xml
hector_turtlebot_scan_filter/config/: default.yaml  sick_robot_day_2014_config.yaml  turtlebot.yaml
hector_turtlebot_scan_filter/launch/: scan_filter.launch  scan_filter_sick_robot_day_2014.launch
hector_turtlebot_scan_filter/src/: hector_turtlebot_scan_filter.cpp
